--- a/src/Components/Organisms/Filter/Filter.stories.mdx
+++ b/src/Components/Organisms/Filter/Filter.stories.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta, Preview, Props, Story, Source } from '@storybook/addon-docs';
+import { Canvas, Meta, ArgsTable, Story, Source } from '@storybook/addon-docs';
 import { ComponentMeta, ComponentStory } from '@storybook/react';
 
 import Filter from './Filter';
@@ -14,7 +14,7 @@ export const Template = (args) => {
 };
 
 <Meta
-  title='Organism/Filter'
+  title='Organism'
   component={Filter}
   parameters={{
     viewMode: 'docs',
@@ -29,7 +29,7 @@ As a developper, it is your responsibility to build the search criteria based on
 
 Play with Filter live on [CodeSandbox](https://codesandbox.io/s/filter-demo-hi6upd)
 
-## search bar items
+## Search bar items
 
 <div
   style={{
@@ -47,7 +47,7 @@ Play with Filter live on [CodeSandbox](https://codesandbox.io/s/filter-demo-hi6u
   </div>
 </div>
 
-<Preview isExpanded={true}>
+<Canvas isExpanded={true}>
   <Filter
     searchBarItems={[
       {
@@ -70,9 +70,9 @@ Play with Filter live on [CodeSandbox](https://codesandbox.io/s/filter-demo-hi6u
     ]}
     onChange={console.log}
   />
-</Preview>
+</Canvas>
 
-## advanced search items
+## Advanced search items
 
 <div
   style={{
@@ -90,7 +90,7 @@ Play with Filter live on [CodeSandbox](https://codesandbox.io/s/filter-demo-hi6u
   </div>
 </div>
 
-<Preview isExpanded={false}>
+<Canvas isExpanded={false}>
   <Filter
     advancedSearchItems={[
       {
@@ -187,11 +187,11 @@ Play with Filter live on [CodeSandbox](https://codesandbox.io/s/filter-demo-hi6u
     ]}
     onChange={console.log}
   />
-</Preview>
+</Canvas>
 
-## localization
+## Localization
 
-<Preview isExpanded={false}>
+<Canvas isExpanded={false}>
   <Filter
     advancedSearchItems={[
       {
@@ -241,11 +241,11 @@ Play with Filter live on [CodeSandbox](https://codesandbox.io/s/filter-demo-hi6u
     }}
     onChange={console.log}
   />
-</Preview>
+</Canvas>
 
-## initial value
+## Initial value
 
-<Preview isExpanded={false}>
+<Canvas isExpanded={false}>
   <Filter
     advancedSearchItems={[
       {
@@ -285,17 +285,17 @@ Play with Filter live on [CodeSandbox](https://codesandbox.io/s/filter-demo-hi6u
     }}
     onChange={console.log}
   />
-</Preview>
+</Canvas>
 
 ## Props
 
-<Props of={Filter} sort='requiredFirst' />
+<ArgsTable of={Filter} sort='requiredFirst' />
 
 ## Story
 
 <Canvas>
   <Story
-    name='Default'
+    name='Filter'
     args={{
       advancedSearchItems: [
         {
