Build: Restore missing storybook build dependency Fix: Organisms/NavBar rename Navbar to NavBar

--- a/src/Components/Organisms/ActionBar/Actionbar.stories.mdx
+++ b/src/Components/Organisms/ActionBar/Actionbar.stories.mdx
@@ -1,5 +1,4 @@
 import { Canvas, Meta, ArgsTable, Story, Source } from '@storybook/addon-docs';
-import { ComponentMeta, ComponentStory } from '@storybook/react';
 
 import ActionBar from './ActionBar';
 import { ColorButtonEnum } from '../../Molecules';
@@ -186,6 +185,8 @@ Play with ActionBar live on [CodeSandbox](https://codesandbox.io/s/actionbar-dem
 ## Props
 
 <ArgsTable of={ActionBar} sort='requiredFirst' />
+
+For layout management, please refer to this [example](https://codesandbox.io/s/size-management-sidebar-xtpkk0)
 
 ## Story
 
