--- a/src/Components/Organisms/Filter/Filter.stories.mdx
+++ b/src/Components/Organisms/Filter/Filter.stories.mdx
@@ -1,5 +1,4 @@
 import { Canvas, Meta, ArgsTable, Story, Source } from '@storybook/addon-docs';
-import { ComponentMeta, ComponentStory } from '@storybook/react';
 
 import Filter from './Filter';
 import { FilterTypeEnum } from './types';
@@ -290,6 +289,8 @@ Play with Filter live on [CodeSandbox](https://codesandbox.io/s/filter-demo-hi6u
 ## Props
 
 <ArgsTable of={Filter} sort='requiredFirst' />
+
+For layout management, please refer to this [example](https://codesandbox.io/s/size-management-sidebar-xtpkk0)
 
 ## Story
 
