Doc: Organisms/NavBar demo link Doc: Organisms/SideBar demo link

--- a/src/Components/Organisms/SideBar/SideBar.stories.mdx
+++ b/src/Components/Organisms/SideBar/SideBar.stories.mdx
@@ -63,7 +63,7 @@ export const Template = (args) => {
 
 # SideBar
 
-Sidebar provides access to a second level of navigation. When available, it must always be on-screen.
+SideBar provides access to a second level of navigation. When available, it must always be on-screen.
 
 It is recommended to be used:
 
@@ -71,7 +71,7 @@ It is recommended to be used:
 - When a page which contains sub-pages
 - Quick navigation between unrelated destinations
 
-Play with Sidebar live on [CodeSandbox]()
+Play with SideBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s312)
 
 ## SideBar with section
 
