--- a/src/Components/Organisms/NavBar/NavBar.stories.mdx
+++ b/src/Components/Organisms/NavBar/NavBar.stories.mdx
@@ -26,7 +26,7 @@ It can contain:
 - Five to seven main destinations (navButtons)
 - Five max transversale destinations (navIcons)
 
-Play with NavBar live on [CodeSandbox]()
+Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s312)
 
 ## Brand
 
