Doc: Update README routes Doc: Organisms/NavBar update overflowY from scroll to auto

--- a/src/Components/Organisms/NavBar/NavBar.stories.mdx
+++ b/src/Components/Organisms/NavBar/NavBar.stories.mdx
@@ -121,7 +121,7 @@ Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s
               height: '300px',
               padding: '0px 16px',
               overflowX: 'hidden',
-              overflowY: 'scroll',
+              overflowY: 'auto',
               backgroundColor: '#FFF',
             }}>
             <p>
@@ -290,7 +290,7 @@ For layout management, please refer to this [example](https://codesandbox.io/s/s
                 height: '300px',
                 padding: '0px 16px',
                 overflowX: 'hidden',
-                overflowY: 'scroll',
+                overflowY: 'auto',
                 backgroundColor: '#FFF',
               }}>
               <p>
