--- a/src/Components/Organisms/DataTable/StaticDataTable/StaticDataTable.stories.mdx
+++ b/src/Components/Organisms/DataTable/StaticDataTable/StaticDataTable.stories.mdx
@@ -122,7 +122,7 @@ Play with StaticDataTable live on [CodeSandbox](https://codesandbox.io/s/datatab
           dataIndex: 'price',
           sorter: true,
           type: ColumnType.AMOUNT,
-          currency: '€',
+          suffix: '€',
         },
         {
           title: 'Percentage',
