Fix: Organisms/NavBar Rename link with redirection for brand link Feat: Organisms/NavBar Adding link to the NavItemProps Feat: Organisms/NavBar Adding tooltip to the NavItemProps

--- a/src/Components/Organisms/NavBar/NavBar.stories.mdx
+++ b/src/Components/Organisms/NavBar/NavBar.stories.mdx
@@ -34,7 +34,7 @@ Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s
   <NavBar
     brand={{
       logoSource: './images/logo.svg',
-      link: '/',
+      redirection: '/',
     }}
   />
 </Canvas>
@@ -213,7 +213,7 @@ For layout management, please refer to this [example](https://codesandbox.io/s/s
     args={{
       brand: {
         logoSource: './images/logo.svg',
-        link: '/',
+        redirection: '/',
       },
       navButtons: [
         {
