--- a/src/Components/Organisms/NavBar/NavBar.stories.mdx
+++ b/src/Components/Organisms/NavBar/NavBar.stories.mdx
@@ -1,11 +1,16 @@
 import { Canvas, Meta, ArgsTable, Story, Source } from '@storybook/addon-docs';
+import { MemoryRouter as Router } from 'react-router-dom';
 
 import NavBar from './NavBar';
 
 import navbarStyle from '../../../assets/_navbar.scss?raw';
 
 export const Template = (args) => {
-  return <NavBar {...args} />;
+  return (
+    <Router>
+      <NavBar {...args} />
+    </Router>
+  );
 };
 
 <Meta
@@ -31,172 +36,180 @@ Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s
 ## Brand
 
 <Canvas isExpanded={true}>
-  <NavBar
-    brand={{
-      logoSource: './images/logo.svg',
-      redirection: '/',
-    }}
-  />
+  <Router>
+    <NavBar
+      brand={{
+        logoSource: './images/logo.svg',
+        redirection: '/',
+      }}
+    />
+  </Router>
 </Canvas>
 
 ## Navigation buttons
 
 <Canvas isExpanded={false}>
-  <NavBar
-    brand={{
-      logoSource: './images/logo.svg',
-    }}
-    navButtons={[
-      {
-        label: 'Label 1',
-        subItems: [
-          {
-            label: 'Label 1',
-            onClick: () => {
-              console.log('label 1 - label 1');
+  <Router>
+    <NavBar
+      brand={{
+        logoSource: './images/logo.svg',
+      }}
+      navButtons={[
+        {
+          label: 'Label 1',
+          subItems: [
+            {
+              label: 'Label 1',
+              onClick: () => {
+                console.log('label 1 - label 1');
+              },
             },
-          },
-          {
-            label: 'Label 2',
-            onClick: () => {
-              console.log('label 1 - label 2');
+            {
+              label: 'Label 2',
+              onClick: () => {
+                console.log('label 1 - label 2');
+              },
             },
-          },
-        ],
-      },
-      {
-        label: 'Label 2',
-        subItems: [
-          {
-            label: 'Label 1',
-            onClick: () => {
-              console.log('label 2 - label 1');
-            },
-          },
-          {
-            label: 'Label 2',
-            onClick: () => {
-              console.log('label 2 - label 2');
-            },
-          },
-        ],
-      },
-      {
-        label: 'Label 3',
-        onClick: () => {
-          console.log('label 3');
+          ],
         },
-      },
-    ]}
-  />
+        {
+          label: 'Label 2',
+          subItems: [
+            {
+              label: 'Label 1',
+              onClick: () => {
+                console.log('label 2 - label 1');
+              },
+            },
+            {
+              label: 'Label 2',
+              onClick: () => {
+                console.log('label 2 - label 2');
+              },
+            },
+          ],
+        },
+        {
+          label: 'Label 3',
+          onClick: () => {
+            console.log('label 3');
+          },
+        },
+      ]}
+    />
+  </Router>
 </Canvas>
 
 ## NavIcons
 
 <Canvas isExpanded={false}>
-  <NavBar
-    brand={{
-      logoSource: './images/logo.svg',
-    }}
-    navIcons={[
-      {
-        icon: ['fal', 'ballot-check'],
-        counter: 2,
-        subItems: [
-          {
-            label: 'Label 1',
-          },
-          {
-            label: 'Label 2',
-          },
-        ],
-      },
-      {
-        icon: ['fal', 'bell'],
-        counter: '+99',
-        customSubItem: (
-          <div
-            style={{
-              maxWidth: '500px',
-              height: '300px',
-              padding: '0px 16px',
-              overflowX: 'hidden',
-              overflowY: 'auto',
-              backgroundColor: '#FFF',
-            }}>
-            <p>
-              Lorem ipsum dolor sit amet. Ut voluptas reiciendis vel praesentium laborum hic voluptas asperiores nam
-              rerum nihil obcaecati labore. Id praesentium porro ea placeat rerum aut tempore totam aut illum cupiditate
-              sed laborum explicabo. Hic explicabo voluptatibus qui repellat fugiat ex voluptatum fuga qui architecto
-              atque quo illum quas aut facilis nesciunt? Ut suscipit rerum ut perferendis nihil ea autem unde est enim
-              veniam nam odio tempora.
-            </p>
-            <p>
-              Quo numquam iste est repellendus numquam et galisum omnis ad praesentium dolores aut neque saepe vel
-              consectetur enim aut cumque neque. Et voluptate sapiente quisquam quasi eum beatae voluptas rem iure
-              velit. Sed impedit eaque 33 natus nihil est quaerat porro est quia nisi qui doloribus aperiam. Sit culpa
-              illum ea consectetur perspiciatis ex veritatis dolorem id velit sequi qui maiores asperiores!
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet. Ut voluptas reiciendis vel praesentium laborum hic voluptas asperiores nam
-              rerum nihil obcaecati labore. Id praesentium porro ea placeat rerum aut tempore totam aut illum cupiditate
-              sed laborum explicabo. Hic explicabo voluptatibus qui repellat fugiat ex voluptatum fuga qui architecto
-              atque quo illum quas aut facilis nesciunt? Ut suscipit rerum ut perferendis nihil ea autem unde est enim
-              veniam nam odio tempora.
-            </p>
-            <p>
-              Quo numquam iste est repellendus numquam et galisum omnis ad praesentium dolores aut neque saepe vel
-              consectetur enim aut cumque neque. Et voluptate sapiente quisquam quasi eum beatae voluptas rem iure
-              velit. Sed impedit eaque 33 natus nihil est quaerat porro est quia nisi qui doloribus aperiam. Sit culpa
-              illum ea consectetur perspiciatis ex veritatis dolorem id velit sequi qui maiores asperiores!
-            </p>
-          </div>
-        ),
-      },
-      {
-        icon: ['fal', 'cog'],
-        subItems: [
-          {
-            label: 'Label 1',
-          },
-          {
-            label: 'Label 2',
-          },
-        ],
-      },
-      {
-        icon: ['fal', 'user-circle'],
-        subItems: [
-          {
-            label: 'Label 1',
-          },
-          {
-            label: 'Label 2',
-          },
-        ],
-      },
-    ]}
-  />
+  <Router>
+    <NavBar
+      brand={{
+        logoSource: './images/logo.svg',
+      }}
+      navIcons={[
+        {
+          icon: ['fal', 'ballot-check'],
+          counter: 2,
+          subItems: [
+            {
+              label: 'Label 1',
+            },
+            {
+              label: 'Label 2',
+            },
+          ],
+        },
+        {
+          icon: ['fal', 'bell'],
+          counter: '+99',
+          customSubItem: (
+            <div
+              style={{
+                maxWidth: '500px',
+                height: '300px',
+                padding: '0px 16px',
+                overflowX: 'hidden',
+                overflowY: 'auto',
+                backgroundColor: '#FFF',
+              }}>
+              <p>
+                Lorem ipsum dolor sit amet. Ut voluptas reiciendis vel praesentium laborum hic voluptas asperiores nam
+                rerum nihil obcaecati labore. Id praesentium porro ea placeat rerum aut tempore totam aut illum
+                cupiditate sed laborum explicabo. Hic explicabo voluptatibus qui repellat fugiat ex voluptatum fuga qui
+                architecto atque quo illum quas aut facilis nesciunt? Ut suscipit rerum ut perferendis nihil ea autem
+                unde est enim veniam nam odio tempora.
+              </p>
+              <p>
+                Quo numquam iste est repellendus numquam et galisum omnis ad praesentium dolores aut neque saepe vel
+                consectetur enim aut cumque neque. Et voluptate sapiente quisquam quasi eum beatae voluptas rem iure
+                velit. Sed impedit eaque 33 natus nihil est quaerat porro est quia nisi qui doloribus aperiam. Sit culpa
+                illum ea consectetur perspiciatis ex veritatis dolorem id velit sequi qui maiores asperiores!
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet. Ut voluptas reiciendis vel praesentium laborum hic voluptas asperiores nam
+                rerum nihil obcaecati labore. Id praesentium porro ea placeat rerum aut tempore totam aut illum
+                cupiditate sed laborum explicabo. Hic explicabo voluptatibus qui repellat fugiat ex voluptatum fuga qui
+                architecto atque quo illum quas aut facilis nesciunt? Ut suscipit rerum ut perferendis nihil ea autem
+                unde est enim veniam nam odio tempora.
+              </p>
+              <p>
+                Quo numquam iste est repellendus numquam et galisum omnis ad praesentium dolores aut neque saepe vel
+                consectetur enim aut cumque neque. Et voluptate sapiente quisquam quasi eum beatae voluptas rem iure
+                velit. Sed impedit eaque 33 natus nihil est quaerat porro est quia nisi qui doloribus aperiam. Sit culpa
+                illum ea consectetur perspiciatis ex veritatis dolorem id velit sequi qui maiores asperiores!
+              </p>
+            </div>
+          ),
+        },
+        {
+          icon: ['fal', 'cog'],
+          subItems: [
+            {
+              label: 'Label 1',
+            },
+            {
+              label: 'Label 2',
+            },
+          ],
+        },
+        {
+          icon: ['fal', 'user-circle'],
+          subItems: [
+            {
+              label: 'Label 1',
+            },
+            {
+              label: 'Label 2',
+            },
+          ],
+        },
+      ]}
+    />
+  </Router>
 </Canvas>
 
 ## searchBar
 
 <Canvas isExpanded={false}>
-  <NavBar
-    brand={{
-      logoSource: './images/logo.svg',
-    }}
-    searchBar={{
-      placeholder: 'Search',
-      onSearch: () => {
-        return Promise.resolve([
-          <div key='result1'>Result 1</div>,
-          <div key='result2'>Result 2</div>,
-          <div key='result3'>Result 3</div>,
-        ]);
-      },
-    }}
-  />
+  <Router>
+    <NavBar
+      brand={{
+        logoSource: './images/logo.svg',
+      }}
+      searchBar={{
+        placeholder: 'Search',
+        onSearch: () => {
+          return Promise.resolve([
+            <div key='result1'>Result 1</div>,
+            <div key='result2'>Result 2</div>,
+            <div key='result3'>Result 3</div>,
+          ]);
+        },
+      }}
+    />
+  </Router>
 </Canvas>
 
 ## Props
