Fix: Organisms/NavBar adding css position: fixed property (en position: relative for storybook) Fix: Organisms/NavBar adding css position: fixed property for the notifications

--- a/src/Components/Organisms/NavBar/NavBar.stories.mdx
+++ b/src/Components/Organisms/NavBar/NavBar.stories.mdx
@@ -42,6 +42,7 @@ Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s
         logoSource: './images/logo.svg',
         redirection: '/',
       }}
+      className='positionRelative'
     />
   </Router>
 </Canvas>
@@ -54,6 +55,7 @@ Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s
       brand={{
         logoSource: './images/logo.svg',
       }}
+      className='positionRelative'
       navButtons={[
         {
           label: 'Label 1',
@@ -108,6 +110,7 @@ Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s
       brand={{
         logoSource: './images/logo.svg',
       }}
+      className='positionRelative'
       navIcons={[
         {
           icon: ['fal', 'ballot-check'],
@@ -198,6 +201,7 @@ Play with NavBar live on [CodeSandbox](https://codesandbox.io/s/sidebar-demo-t4s
       brand={{
         logoSource: './images/logo.svg',
       }}
+      className='positionRelative'
       searchBar={{
         placeholder: 'Search',
         onSearch: () => {
@@ -228,6 +232,7 @@ For layout management, please refer to this [example](https://codesandbox.io/s/s
         logoSource: './images/logo.svg',
         redirection: '/',
       },
+      className: 'positionRelative',
       navButtons: [
         {
           label: 'Label 1',
