Fix: Atoms/DatePickerInput remove position relative from css class .react-datepicker__input-container Fix: Organisms/Filter set buttons of the filter bar to reversed
Feat: Organisms/DataTable Add Tooltip fo the column title
Feat: Organisms/DataTable provide a way to make the header sticky/floating whenever scrolling
Feat: Template/Portfolio provide a way to make the table header sticky/floating whenever scrolling

--- a/src/Components/Organisms/DataTable/LineEditableInPlaceDataTable/LineEditableInPlaceDataTable.stories.mdx
+++ b/src/Components/Organisms/DataTable/LineEditableInPlaceDataTable/LineEditableInPlaceDataTable.stories.mdx
@@ -308,6 +308,7 @@ Using `canAddNewLine` and `onNewLine` you can enable new row creation and manage
         {
           title: 'Date',
           dataIndex: 'startDate',
+          editable: true,
           sorter: true,
           type: ColumnType.DATE,
         },
