Breaking change: Atoms/Container suppression
Doc: update storybook plugin order
Fix: Atom/Section allow size adjustment even in non collapsible mode
Fix: Atom/SelectInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Atom/MultiSelectInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Atom/DynamicSearchInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Atom/DynamicSearchCreatableInput use select-portal-id when portal is in used (to be included in the correct order)
Fix: Molecule/Toaster minor css fixes
Fix: Organism/ActionBar use Arial, Helvetica for the dynamically sized input (as other font are very badly supported)
Fix: Template/Portfolio fix side spacing

--- a/src/Components/Organisms/DataTable/DataTable.stories.mdx
+++ b/src/Components/Organisms/DataTable/DataTable.stories.mdx
@@ -125,6 +125,7 @@ More details about <LinkTo story='columns'>Columns</LinkTo>
         moreActionsMessage: 'Nore actions',
         title: 'Buttons',
         type: ColumnType.BUTTON,
+        width: '100px',
       },
     ]}
     data={[
@@ -288,7 +289,7 @@ Play with Advanced LineEditableDataTable live on [CodeSandbox](https://codesandb
       },
     ]}
     extra={{
-      actionColumnWidth: '50px',
+      actionColumnWidth: '100px',
       onRowEdit: (row, rowIndex) => {
         console.log(`Row start edition: ${JSON.stringify(row)}, edited row index: ${rowIndex}`);
       },
@@ -698,6 +699,7 @@ Especially usefull when having to display 2 tables side by side.
           title: 'Actions',
           type: ColumnType.BUTTON,
           moreActionsMessage: 'Nore actions',
+          width: '100px',
           buttons: [
             {
               icon: ['fal', 'arrow-down-to-line'],
